positioning fixed, adding right alignment conditionals

--- a/sass/ui/_tooltips.scss
+++ b/sass/ui/_tooltips.scss
@@ -97,3 +97,9 @@
 .ttip {
 	@include tooltip($tt-min-width, $tt-bgcolor, $tt-position);
 }
+
+.ttip:after, .ttip:before {
+	@include respond(portrait-tablets) {
+		display: none;
+	}
+}
