--- a/sass/var/_settings.scss
+++ b/sass/var/_settings.scss
@@ -147,7 +147,7 @@ $table-stripe-bgcolor: #e5e5e5;
 $tt-min-width: 150px;
 $tt-bgcolor: #ff0000;
 $tt-position: bottom;					// position: top / bottom / left / right
-$tt-textalign: left;					// optional: text alignment: left / right    <--- kind of janky
+$tt-textalign: right;					// text alignment: left / right
 $tt-pretty: yes;						// yes = pretty / no = flat
 
 // Floats
